fixed incorrect test expectation